# AutoZYC_2

./: .gitignore  @AutoZYC.anm2  @AutoZYC.obj2  @AutoZYC.tra2  @AutoZYC_test.obj2  @AutoZuoYouChou_easing.obj2  @AutoZuoYouChou_easing.tra2  @AutoZuoYouChou_effects.anm2  @AutoZuoYouChou_parser.obj2  AGENTS.md  AutoZYCParse.cpp  CMakeLists.txt  Chinese.AutoZYC.aul2  English.AutoZYC.aul2  How2use.txt  Makefile  README.md  Readme!.txt  deploy.ps1
docs/: known-bugs.md  refactoring_report.md
native/: AGENTS.md
native/AutoZYC/: AutoZYC.cpp  Makefile
native/AutoZYCParse/: AutoZYCParse.cpp
script/: @AutoZYC.anm2  @AutoZYC.obj2  @AutoZYC.tra2  AGENTS.md
script/AutoZYC/: @AutoZYC.anm2  @AutoZYC.tra2
script/test/: @AutoZYC_test.obj2
src/core/: DataManager.cpp  DataManager.h  EventTypes.h  ExpressionEngine.cpp  ExpressionEngine.h  Logger.h  MidiParser.cpp  MidiParser.h  RppParser.cpp  RppParser.h
src/generate/: CumulativeTransform.cpp  CumulativeTransform.h  ObjectGenerator.cpp  ObjectGenerator.h
src/plugin/: PluginEntry.cpp  ProjectConfig.cpp  ProjectConfig.h
src/ui/: GenerationDialog.cpp  GenerationDialog.h  SettingsDialog.cpp  SettingsDialog.h
tests/: main.cpp  test_cumulative.cpp  test_data_manager.cpp  test_e2e_pipeline.cpp  test_event_types.cpp  test_expression.cpp  test_midi_parser.cpp  test_object_generator.cpp  test_parser_regression.cpp  test_rpp_parser.cpp
